Revert "Fix missing scrollbar in publish queue > item history"
This reverts commit c351dc4d5c668950c6a06902710ab9033685d777.

--- a/scripts/apps/authoring/versioning/history/history.scss
+++ b/scripts/apps/authoring/versioning/history/history.scss
@@ -6,7 +6,7 @@
 
 
 .history-list {
-
+    padding: 10px;
     .item {
         padding: 10px 5px;
         border-bottom: 1px dotted $gray;
